--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^9.0.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
@@ -32,6 +33,8 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -50,6 +53,7 @@
     "@types/jest": "28.1.8",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^16.18.12",
+    "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
