feat: auth 2/3, database module. fix: refactoring controllers/services

--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
-TOWER_DB_HOST=localhost
-TOWER_DB_PORT=5432
-TOWER_DB_USERNAME=postgres
-TOWER_DB_PASSWORD=postgres
-TOWER_DB_DATABASE=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASS=postgres
+DB_DIALECT=postgres
+DB_NAME_TEST=postgres
+DB_NAME_DEVELOPMENT=postgres
+DB_NAME_PRODUCTION=postgres
+JWTKEY=fod'oLn-$"}`]T?{F#'Tz5o90A|g~tkw.MiM%jy@wI#k:mTtYb3xSzzI2fEV(=Scz2-K1V{?w2L@>0z^-"`wS.BMid4|kQg-CN8e
+TOKEN_EXPIRATION=7d
+BEARER=Bearer
 NODE_ENV=production
