--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": ".*controller\\.spec\\.ts$",
+    "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
