feat: volunteer assignments

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,5 @@
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASS=
-DB_DIALECT=
-DB_NAME=
-JWTKEY=
-TOKEN_EXPIRATION=
-BEARER=
-NODE_ENV=
+JWTKEY
+TOKEN_EXPIRATION
+BEARER
+NODE_ENV
+DATABASE_URL
